--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
           cache-dependency-path: |
-            server/package-lock.json
-            client/package-lock.json
+            Backend/package-lock.json
+            Frontend/package-lock.json
 
       # ------------------------------
       # BACKEND SETUP
